--- a/package.json
+++ b/package.json
@@ -9,11 +9,26 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@emotion/react": "^11.11.4",
+    "@emotion/styled": "^11.11.5",
+    "@mui/icons-material": "^5.15.14",
+    "@mui/material": "^5.15.14",
+    "@radix-ui/react-aspect-ratio": "^1.0.3",
+    "@radix-ui/react-avatar": "^1.0.4",
+    "@radix-ui/react-separator": "^1.0.3",
+    "@tabler/icons-react": "^3.1.0",
     "aos": "^2.3.4",
-    "lucide-react": "^0.365.0",
+    "class-variance-authority": "^0.7.0",
+    "clsx": "^2.1.0",
+    "framer-motion": "^11.0.23",
+    "lucide-react": "^0.363.0",
     "next": "14.1.4",
     "react": "^18",
-    "react-dom": "^18"
+    "react-calendly": "^4.3.0",
+    "react-dom": "^18",
+    "react-youtube": "^10.1.0",
+    "tailwind-merge": "^2.2.2",
+    "tailwindcss-animate": "^1.0.7"
   },
   "devDependencies": {
     "@types/aos": "^3.0.7",
